@@ -2,13 +2,12 @@ package com.dynamiccarsharing.carsharing.repository.inmemory;
 
 import com.dynamiccarsharing.carsharing.enums.CarStatus;
 import com.dynamiccarsharing.carsharing.model.Car;
-import com.dynamiccarsharing.carsharing.repository.jdbc.CarRepositoryJdbcImpl;
+import com.dynamiccarsharing.carsharing.repository.CarRepository;
 import com.dynamiccarsharing.carsharing.filter.Filter;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-public class InMemoryCarRepositoryJdbcImpl implements CarRepositoryJdbcImpl {
+public class InMemoryCarRepositoryJdbcImpl implements CarRepository {
     private final Map<Long, Car> carMap = new HashMap<>();
 
     @Override
@@ -29,7 +28,7 @@ public class InMemoryCarRepositoryJdbcImpl implements CarRepositoryJdbcImpl {
 
     @Override
     public List<Car> findByFilter(Filter<Car> filter) {
-        return carMap.values().stream().filter(filter::test).collect(Collectors.toList());
+        return carMap.values().stream().filter(filter::test).toList();
     }
 
     @Override
@@ -37,10 +36,9 @@ public class InMemoryCarRepositoryJdbcImpl implements CarRepositoryJdbcImpl {
         return carMap.values();
     }
 
-    @Override
     public List<Car> findByStatus(CarStatus status) {
         return carMap.values().stream()
                 .filter(car -> car.getStatus() == status)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
