@@ -1,13 +1,12 @@
 package com.dynamiccarsharing.carsharing.repository.inmemory;
 
 import com.dynamiccarsharing.carsharing.model.UserReview;
-import com.dynamiccarsharing.carsharing.repository.jdbc.UserReviewRepositoryJdbcImpl;
+import com.dynamiccarsharing.carsharing.repository.UserReviewRepository;
 import com.dynamiccarsharing.carsharing.filter.Filter;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
-public class InMemoryUserReviewRepositoryJdbcImpl implements UserReviewRepositoryJdbcImpl {
+public class InMemoryUserReviewRepositoryJdbcImpl implements UserReviewRepository {
     private final Map<Long, UserReview> userReviewMap = new HashMap<>();
 
     @Override
@@ -28,25 +27,25 @@ public class InMemoryUserReviewRepositoryJdbcImpl implements UserReviewRepositor
 
     @Override
     public List<UserReview> findByFilter(Filter<UserReview> filter) {
-        return userReviewMap.values().stream().filter(filter::test).collect(Collectors.toList());
+        return userReviewMap.values().stream().filter(filter::test).toList();
     }
 
     @Override
-    public Iterable<UserReview> findAll() {
-        return userReviewMap.values();
+    public List<UserReview> findAll() {
+        return new ArrayList<>(userReviewMap.values());
     }
 
     @Override
     public List<UserReview> findByUserId(Long userId) {
         return userReviewMap.values().stream()
                 .filter(review -> review.getUser() != null && review.getUser().getId().equals(userId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<UserReview> findByReviewerId(Long reviewerId) {
         return userReviewMap.values().stream()
                 .filter(review -> review.getReviewer() != null && review.getReviewer().getId().equals(reviewerId))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
